Fix dark mode alert close button

--- a/src-ui/src/theme_dark.scss
+++ b/src-ui/src/theme_dark.scss
@@ -141,11 +141,11 @@ $border-color-dark-mode: #47494f;
     color: $text-color-dark-mode-accent;
   }
 
-  .close, .modal .btn-close {
+  .close, .modal .btn-close, .alert .btn-close {
     text-shadow: 0 1px 0 #666;
   }
 
-  .modal .btn-close {
+  .modal .btn-close, .alert .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
   }
 
